Fix text collapse in mobile

--- a/style.css
+++ b/style.css
@@ -111,4 +111,7 @@ body {
         width: 2rem;
         height: 2rem;
     }
+    .wrapper{
+        line-height: 1rem;
+    }
 }
